# PHES-ODM-sharing

./: .Rhistory  .gitignore  INSTALL.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  run-all-tests.sh  run-unit-tests.sh  tech-spec.md
.github/workflows/: lint.yml  test.yml  type-check.yml  unit-test.yml
docs/: sqlite.md  tech-spec.md
docs/manual/: .gitignore  _quarto.yml  _renderer.py  api.qmd  build-api.sh  cli-reference.qmd  cli-usage.qmd  cli.qmd  common.py  getting-started.qmd  index.qmd  install.qmd  python.qmd  sqlite.qmd
docs/manual/api-usage/: .gitignore  api-usage.qmd
docs/manual/assets/: data.xlsx  measures.csv  schema-missing-headers.csv  schema-missing-rules.csv  style.scss
docs/spec/: tech-spec.md  trees-algo.md
sharing/: create_dataset.py
sharing/readme-examples/: sharing-example.csv  sharing-rules-summary-example.csv  sharing-summary-example.csv  sharing_metadata-example.csv
sharing/sharing-csv-examples/: readme-examples.csv
src/odm_sharing/: sharing.py
tests/: 3.1.3.csv  3.2.csv  4.3.csv  4.4.csv  common.py  filter-set.csv  int_test_delatolla.py  int_tests.py  test_api.py  test_cli.py  test_cons.py  test_queries.py  test_rules.py  test_trees.py
tests/api/: id-schema.csv  str-filter-schema.csv  true-schema.csv
tests/cli/: multi-schema.csv  mytable1.csv  mytable2.csv
tests/common/: 3.1.1.csv  3.1.2.csv  3.1.4.csv  3.2.csv  4.1.csv  4.4.csv  5.1.csv  mytable.csv  passthrough-schema.csv  testdata.xlsx
tests/rules/: schema-33.csv  schema-35.csv
tools/: share.py
(+28 files in other folders)
